Fix: Whitespace issue

--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@
 /* Default styles */
 
 html {
-  height: 100%;
   scroll-behavior: smooth;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 body {
